v0.4.0
2009-07-14
Refactor: complete rewrite of the client-server communication mechanisms.

v0.3.2
2009-06-05
Netzke doesn't overwrite session[:user] anymore to not cause authentication-related problems.

v0.3.1
2009-05-07
Fix: persistent_config_manager can now be set to nil, and it will work fine

v0.3.0
2009-05-07
Refactor: got rid of NetzkeLayout model, now all layouts are stored in netzke_preferences
New: persistent_config now has a method for_widget that accepts a block
autotest compatibility
New: String#to_b converts a string to true/false
New: Netzke::Base.session introduced for session data
New: weak_children_config and strong_children_config can now be declared by a widget, which specifies weak and strong configuration that every child of this widget will receive (e.g. display/hide configuration tool)
Fix: (degradation) flash message is now shown again in case of erroneous attempt to load a widget
New: widgets now can check session[:netzke_just_logged_in] and session[:netzke_just_logged_out] automatically set by Netzke after login/logout

v0.2.11
Introduction of getOwnerWidget()-method to Ext.Component. It provides the Netzke widget this Component belongs to.

v0.2.10
Removed dependency on 'json' gem.
Rails v2.3.2 compatibility.

v0.2.9
Actions, toolbars and tools reworked for easier configuration.
Menus introduced (based on actions).
Significant code clean-up.
Bug fix (nasty one): Ext.widgetMixIn was getting messed up along with dynamic widget loading.
Must work in IE now.

v0.2.8
Support for extra javascripts and stylesheets per widget.

v0.2.7
QuickTips get initialized now, as otherwise Ext 2.2.1 doesn't properly destroy() BoxComponents for me.

v0.2.6
FeedackGhost is now capable of displaying multiple flash messages.
Dependencies slightly refactored.
An informative exception added to Base#aggregatee_instance.
JS-level inheritance enabled.
Work-around for the problem with Ext 2.2.1 in loadWidget.