@@ -1,4 +1,3 @@
 class User < ActiveRecord::Base
   belongs_to :role
-  has_many :contacts
 end
